# rrmqr

./: .gitignore  Cargo.toml  README.md  release.sh  rustfmt.toml
src/: debug.rs  decode.rs  detect.rs  geometry.rs  lib.rs  prepare.rs  rmqr_decode.rs  rmqr_detect.rs  rmqr_ecc.rs  rmqr_finder.rs  rmqr_grid.rs  rmqr_version_db.rs
src/identify/: grid.rs  match_capstones.rs
tests/: test_errors.rs  test_full.rs  test_load.rs
